fix margins on small screen

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -11055,3 +11055,16 @@ header.masthead h1, header.masthead .h1 {
   opacity: 1;
 }
 
+
+@media (max-width: 991px) {
+  #program img, #mnenja img {
+    max-width: 50%;
+  }
+}
+
+
+
+
+
+
+
